--- a/src/components/AppTopbar/AppTopbar.scss
+++ b/src/components/AppTopbar/AppTopbar.scss
@@ -1,13 +1,36 @@
 .app-topbar {
-    background-color: rgba($color: #242020, $alpha: 0.95);
+  background-color: color('dark-grey');
+  display: flex;
+  height: 80px;
+  justify-content: space-between;
+  padding: 10px 0;
+  width: 100%;
+
+  &_inner {
     display: flex;
-    height: 80px;
-    justify-content: space-between;
-    padding: 10px 0;
-    width: 100%;
+    align-items: center;
+  }
 
-    &_inner {
-        display: flex;
+  &_input {
+    width: 400px;
+    padding: 0 20px 0 0;
+    height: 80 px;
+
+    &_text {
+      color: color("light");
+      width: 100%;
+      height: 100%;
+      padding: 15px 20px;
+      font-family: "SEN", sans-serif;
+      font-size: 1rem;
+      border-radius: 20px;
+      border: none;
+
+      &:focus {
+        color: color("dark");
+        border: none;
+        transition-duration: 500ms;
+      }
     }
+  }
 }
-
