--- a/src/components/Icon/icon.scss
+++ b/src/components/Icon/icon.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30px;
-    width: 30px;
+    height: 100%;
+    width: 100%;
 }
+
