--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -1,17 +1,22 @@
 .main-layout {
     align-items: center;
-    background-color: color('dark-grey');
+    background-image: url('../../assets/background.jpeg');
     display: flex;
     height: 100vh;
     justify-content: center;
     width: 100vw;
     
     &_body {
-        background-image: url('../../assets/background.jpg');
+        background-color: color('dark-grey');
         box-shadow: 10px 10px 20px #000000;
         display: flex;
+        flex-direction: column;
         height: 90vh;
         width: 90vw;
+    }
+
+    &_content {
+        overflow-y: auto;
     }
 }
 
