--- a/src/theme/res/colors.scss
+++ b/src/theme/res/colors.scss
@@ -1,7 +1,7 @@
 $color-dark: #151515;
 $color-light: #eee;
 $color-dark-grey: #242424;
-$color-primary: #118DBA;
+$color-primary: #1da175;
 $color-grey: #ADADAD;
 $color-light-grey: #dddddd;
 $color-transparent: rgba(0, 0, 0, 0);
