--- a/src/components/AppTopbar/AppTopbar.scss
+++ b/src/components/AppTopbar/AppTopbar.scss
@@ -1,35 +1,65 @@
 .app-topbar {
-  background-color: color('dark-grey');
+  background-color: rgba(0, 0, 0, 0.45);
   display: flex;
-  height: 80px;
+  flex-wrap: wrap;
   justify-content: space-between;
-  padding: 10px 0;
   width: 100%;
+  padding: 10px 18px;
+
+  &.light {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 
   &_inner {
+    //Navigation Items, Flex Child
     display: flex;
+    flex: 1;
     align-items: center;
+    justify-content: end;
+    @include if-tablet {
+      justify-content: center;
+    }
+  }
+
+  &_logo {
+    //Logo, Flex Child
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: start;
+  }
+
+  &_search {
+    //Searchbar input, Flex Child
+    display: flex;
+    flex: 1;
+    flex-basis: 100%;
+    justify-content: center;
+
+    @include if-tablet {
+      flex-basis: 0;
+      justify-content: end;
+      width: 300px;
+    }
   }
 
   &_input {
-    width: 400px;
-    padding: 0 20px 0 0;
-    height: 80 px;
+    width: 100%;
+    padding: 0 0 0 0;
+    margin-top: 10px;
+
 
     &_text {
       color: color("light");
       width: 100%;
-      height: 100%;
-      padding: 15px 20px;
+      padding: 8px 20px;
       font-family: "SEN", sans-serif;
       font-size: 1rem;
       border-radius: 20px;
       border: none;
 
       &:focus {
-        color: color("dark");
-        border: none;
-        transition-duration: 500ms;
+        color: (color("dark-grey"));
       }
     }
   }
