--- a/src/components/ImageModal/components/ImageModalData.scss
+++ b/src/components/ImageModal/components/ImageModalData.scss
@@ -1,22 +1,34 @@
 .data {
   align-items: center;
   display: grid;
-  font-family: font-family('body');
-  grid-template-columns: 1fr 1fr 1fr;
+  font-family: font-family("body");
+  grid-template-columns: 1fr 1fr;
   padding-bottom: 30px;
 
+  @include if-tablet {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
   &_value {
-    color: color('light');
-    font-size: 1rem;
-    margin-left: 10px;
+    color: color("light");
+    font-size: 0.8rem;
+    margin-left: 8px;
     width: 20%;
-    &.lightMode {
-      color: color('dark');
+    &.light {
+      color: color("dark-blue");
+    }
+    @include if-tablet {
+      font-size: 0.9rem;
+      margin-left: 10px;
     }
   }
 
   &_icon {
-    width: 30px;
+    width: 25px;
+
+    @include if-tablet {
+      width: 30px;
+    }
   }
 
   &__block {
