--- a/src/components/ImageModal/components/ImageModalHeader.scss
+++ b/src/components/ImageModal/components/ImageModalHeader.scss
@@ -10,14 +10,17 @@
   &_title {
     color: color('grey');
     font-size: 0.75rem;
-    &.lightMode {
-      color: color('dark-grey');
-    }
   }
   &__content {
     color: color('primary');
     font-size: 1.25rem;
     margin-top: 6px;
+    &.blue {
+      color: color('blue');
+    }
+    &.light {
+      color: color('dark-blue');
+    }
   }
   &__liked {
     align-items: center;
@@ -27,6 +30,13 @@
     justify-content: center;
     width: 50px;
     padding: 10px;
+    transition-duration: 400ms;
+    &.blue {
+      background-color: color('blue');
+    }
+    &.light {
+      background-color: color('dark-blue');
+    }
   }
   &__notliked {
     align-items: center;
@@ -34,7 +44,7 @@
     display: flex;
     height: 50px;
     justify-content: center;
-    transition-duration: 5s;
+    transition-duration: 400ms;
     width: 50px;
     padding: 10px;
 
