--- a/src/components/SingleImage/SingleImage.scss
+++ b/src/components/SingleImage/SingleImage.scss
@@ -1,7 +1,11 @@
 .img {
     height: 100%;
     width: 100%;
-    background-color: color('dark');
+    background-color: color('dark-grey-2');
+
+    &.light {
+        background-color: color('light-grey');
+    }
 
     &_image {
         display: block;
@@ -9,6 +13,12 @@
         width: 100%;
         object-fit: cover;
         position: relative;
+
+        &:hover {
+            height: 102%;
+            width: 102%;
+            transition-duration: 200ms;
+        }
     }
 
     &_heart {
@@ -18,6 +28,16 @@
         position: relative;
         bottom: 100%;
         padding: 5px;
+
+        &.blue {
+            background-color: color('blue');
+        }
+
+        &.light {
+            background-color: color('light-grey');
+            border: 2px;
+            border-color: color('dark-blue');
+        }
     }
 }
 
