--- a/src/components/TopbarLogo/TopbarLogo.scss
+++ b/src/components/TopbarLogo/TopbarLogo.scss
@@ -1,11 +1,11 @@
 .topbar-logo {
-    align-items: center;
-    color: color('light');
-    display: flex;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    height: 100%;
-    justify-content: center;
-    text-shadow: 2px 2px 2px #000;
-    width: 50px;
+  align-items: center;
+  color: color("light");
+  display: flex;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  height: 100%;
+  justify-content: center;
+  text-shadow: 2px 2px 2px #000;
+  width: 50px;
 }
