--- a/src/components/ImageModal/components/ImageModalAbout.scss
+++ b/src/components/ImageModal/components/ImageModalAbout.scss
@@ -1,5 +1,5 @@
 .about {
-  background-color: color('dark-grey');
+  background-color: color("dark-grey");
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -14,8 +14,6 @@
   }
 
   &.light {
-    background-color: color('light-grey');
+    background-color: color("light-grey");
   }
-
-
 }
