--- a/src/components/ImageModal/components/ImageModalCamera.scss
+++ b/src/components/ImageModal/components/ImageModalCamera.scss
@@ -1,7 +1,7 @@
 .camera {
-  border-top: 1px solid darken(color('grey'), 50);
+  border-top: 1px solid darken(color("grey"), 50);
   display: grid;
-  font-family: font-family('body');
+  font-family: font-family("body");
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
   padding-top: 30px;
@@ -12,19 +12,19 @@
   }
 
   &__title {
-    color: color('grey');
+    color: color("grey");
     font-size: 0.75rem;
     &.light {
-      color:color('dark-grey');
+      color: color("dark-grey");
     }
   }
 
   &__content {
-    color: color('light');
+    color: color("light");
     font-size: 0.75rem;
-    margin-top: spacing('xs');
+    margin-top: spacing("xs");
     &.light {
-      color:color('dark-blue');
+      color: color("dark-blue");
     }
   }
 }
