--- a/src/components/ImageModal/components/ImageModalDescription.scss
+++ b/src/components/ImageModal/components/ImageModalDescription.scss
@@ -1,23 +1,23 @@
 .description {
-  font-family: font-family('body');
+  font-family: font-family("body");
   margin-top: 30px;
   min-height: 140px;
   width: 100%;
 
   &__title {
-    color: color('grey');
+    color: color("grey");
     font-size: 0.75rem;
     &.lightMode {
-      color: color('dark-grey');
+      color: color("dark-grey");
     }
   }
 
   &__content {
-    color: color('light');
+    color: color("light");
     font-size: 1.25rem;
-    margin-top: spacing('xs');
+    margin-top: spacing("xs");
     &.light {
-      color: color('dark-blue');
+      color: color("dark-blue");
     }
   }
 }
