--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -1,47 +1,43 @@
 .main-layout {
-    align-items: center;
-    background-image: url('../../assets/bg-default.jpeg');
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    width: 100vw;
+  align-items: center;
+  background-image: url("../../assets/bg-default.jpeg");
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  width: 100vw;
 
-    &.blue {
-        background-image: url('../../assets/bg-blue.jpg');
-        background-size: cover;
+  &.blue {
+    background-image: url("../../assets/bg-blue.jpg");
+    background-size: cover;
+  }
+
+  &.light {
+    background-image: url("../../assets/bg-light.jpg");
+  }
+
+  &_body {
+    background-color: color("transparent");
+    box-shadow: 10px 10px 20px #000000;
+    display: flex;
+    flex-direction: column;
+    height: 95vh; //90
+    width: 90vw;
+    &.is-modal-active {
+      filter: blur(2px);
     }
+
+    @include if-tablet {
+      height: 90vh;
+    }
+  }
+
+  &_content {
+    background-color: color("dark-grey");
+    height: 100%;
+    overflow-y: auto;
 
     &.light {
-        background-image: url('../../assets/bg-light.jpg');
+      background-color: rgba(200, 200, 200, 0.8);
     }
-    
-    &_body {
-        background-color: color('transparent');
-        box-shadow: 10px 10px 20px #000000;
-        display: flex;
-        flex-direction: column;
-        height: 95vh; //90
-        width: 90vw;
-        &.is-modal-active {
-            filter: blur(2px);
-        }
-
-        @include if-tablet {
-            height: 90vh;
-
-        }
-    }
-
-    &_content {
-        background-color: color('dark-grey');
-        height: 100%;
-        overflow-y: auto;
-
-        &.light {
-            background-color: rgba(200, 200, 200, 0.8);
-        }
-    }
+  }
 }
-
-
-
