--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 50px; //75
+    width: 50px;
     border-radius: 5px;
 
     &.is-active {
@@ -24,20 +24,22 @@
     }
 
     &:hover {
-      transition-duration: 400ms;
-      background-color: color("primary");
-      cursor: pointer;
-      &.blue {
-        background-color: color("blue");
-      }
-      &.light {
-        background-color: color("dark-blue");
+      @include if-desktop {
+        transition-duration: 400ms;
+        background-color: color("primary");
+        cursor: pointer;
+        &.blue {
+          background-color: color("blue");
+        }
+        &.light {
+          background-color: color("dark-blue");
+        }
       }
     }
   }
 
   &_icon {
-    width: 30px; //30
-    height: 50px; //50
+    width: 30px;
+    height: 50px;
   }
 }
