--- a/src/components/AppTopbar/AppTopbar.scss
+++ b/src/components/AppTopbar/AppTopbar.scss
@@ -11,6 +11,7 @@
   }
 
   &_inner {
+    //Navigation Items, Flex Child
     display: flex;
     flex: 1;
     align-items: center;
@@ -21,6 +22,7 @@
   }
 
   &_logo {
+    //Logo, Flex Child
     display: flex;
     flex: 1;
     align-items: center;
@@ -28,6 +30,7 @@
   }
 
   &_search {
+    //Searchbar input, Flex Child
     display: flex;
     flex: 1;
     flex-basis: 100%;
@@ -42,6 +45,7 @@
 
   &_input {
     width: 100%;
+    padding: 0 0 0 0;
     margin-top: 10px;
 
 
