--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    width: 50px;
+    width: 50px; //75
     border-radius: 5px;
 
     &.is-active {
@@ -24,22 +24,20 @@
     }
 
     &:hover {
-      @include if-desktop {
-        transition-duration: 400ms;
-        background-color: color("primary");
-        cursor: pointer;
-        &.blue {
-          background-color: color("blue");
-        }
-        &.light {
-          background-color: color("dark-blue");
-        }
+      transition-duration: 400ms;
+      background-color: color("primary");
+      cursor: pointer;
+      &.blue {
+        background-color: color("blue");
+      }
+      &.light {
+        background-color: color("dark-blue");
       }
     }
   }
 
   &_icon {
-    width: 30px;
-    height: 50px;
+    width: 30px; //30
+    height: 50px; //50
   }
 }
