--- a/src/layouts/MainLayout/MainLayout.scss
+++ b/src/layouts/MainLayout/MainLayout.scss
@@ -20,7 +20,7 @@
     box-shadow: 10px 10px 20px #000000;
     display: flex;
     flex-direction: column;
-    height: 95vh;
+    height: 95vh; //90
     width: 90vw;
     &.is-modal-active {
       filter: blur(2px);
