--- a/src/components/ImageModal/ImageModal.scss
+++ b/src/components/ImageModal/ImageModal.scss
@@ -2,7 +2,7 @@
   align-items: center;
   background-color: rgba(20, 20, 20, 0.8);
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   left: 0;
   margin-right: auto;
