--- a/src/components/ImageModal/ImageModal.scss
+++ b/src/components/ImageModal/ImageModal.scss
@@ -7,7 +7,7 @@
   left: 0;
   margin-right: auto;
   padding-bottom: 5vh;
-  position: fixed;
+  position: absolute;
   right: 0;
   width: 100%;
   z-index: 100;
